[package]
name = "yinyang"
version = "0.2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.9.0"
trayicon = "0.1.1"
winapi = { version = "0.3.9", features = ["winuser"] }
dirs = "3.0.2"
 
[build-dependencies]
winres = "0.1.11"

[profile.release]
opt-level = 3
lto = true